# email_classification

./: README.md  pyproject.toml  template.py
project/research/: experiment.ipynb
project/src/: logger.py  pyproject.toml
project/src/config/: .env  model.py
project/src/model/models/: rf_v1
project/src/model/pipeline/: collection.py  model.py  preparation.py
