[tool.poetry]
name = "email-classification"
version = "0.1.0"
description = ""
authors = ["Jeffrey Ojuederhie <vgauss07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
pandas = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
